--- a/app/src/main/res/layout/activity_daily_report.xml
+++ b/app/src/main/res/layout/activity_daily_report.xml
@@ -4,21 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".ListReport.DailyReportActivity"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="70dp"
         android:background="@color/white"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/btn_BackReport"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_gravity="center"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="20dp"
             android:background="@drawable/back"/>
 
         <TextView
@@ -28,22 +29,21 @@
             android:gravity="center"
             android:text="Báo cáo - thống kê"
             android:textColor="@color/black"
-            android:textSize="17sp"
+            android:textSize="19sp"
             android:textStyle="bold" />
 
         <ImageButton
-            android:id="@+id/btn_AddProduct"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_gravity="center"
-            android:layout_marginRight="10dp"
-            android:background="@color/white" />
+            android:layout_marginRight="20dp" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="500dp"
         android:layout_weight="1"
+        android:background="@color/white"
         android:orientation="vertical">
 
         <LinearLayout
@@ -54,7 +54,10 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
-                android:text="Tùy chọn ngày báo cáo"
+                android:text="Chọn ngày báo cáo"
+                android:textSize="18dp"
+                android:textColor="@color/black"
+                android:textStyle="bold"
                 android:gravity="center|left"
                 android:layout_margin="5dp"/>
 
@@ -62,7 +65,7 @@
                 android:id="@+id/report_datereport"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:text="23-01-2021"
+                android:hint="23-01-2021"
                 android:textSize="22sp"
                 android:textStyle="bold"
                 android:gravity="center"/>
