--- a/app/src/main/res/layout/activity_daily_report.xml
+++ b/app/src/main/res/layout/activity_daily_report.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".ListReport.DailyReportActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".ListReport.DailyReportActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,23 +19,24 @@
             android:layout_height="30dp"
             android:layout_gravity="center"
             android:layout_marginLeft="20dp"
-            android:background="@drawable/back"/>
+            android:background="@drawable/back" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="Báo cáo - thống kê"
+            android:text="Thống kê theo ngày"
             android:textColor="@color/black"
             android:textSize="19sp"
             android:textStyle="bold" />
 
-        <ImageButton
+        <View
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_gravity="center"
-            android:layout_marginRight="20dp" />
+            android:layout_marginRight="20dp"
+            android:background="@color/white" />
     </LinearLayout>
 
     <LinearLayout
@@ -49,54 +49,67 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:gravity="center"
+            android:orientation="horizontal">
 
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:text="Chọn ngày báo cáo"
-                android:textSize="18dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="10dp"
+                android:text="Chọn ngày"
                 android:textColor="@color/black"
-                android:textStyle="bold"
-                android:gravity="center|left"
-                android:layout_margin="5dp"/>
+                android:textSize="17dp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/report_datereport"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="40dp"
-                android:hint="23-01-2021"
-                android:textSize="22sp"
-                android:textStyle="bold"
-                android:gravity="center"/>
+                android:layout_weight="1"
+                android:background="@drawable/bg_textfield"
+                android:drawableRight="@drawable/sort"
+                android:gravity="center"
+                android:paddingRight="7dp"
+                android:textSize="15sp"
+                android:textStyle="bold" />
 
             <Button
                 android:id="@+id/report_xemreport"
-                android:layout_width="match_parent"
+                android:layout_width="100dp"
                 android:layout_height="50dp"
-                android:text="Xem báo cáo"
-                android:layout_margin="5dp"/>
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="20dp"
+                android:background="@drawable/bg_blue"
+                android:text="Xem"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:textSize="17dp"
+                android:textStyle="bold" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="400dp"
-            android:orientation="vertical"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:orientation="vertical">
 
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="30dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="10dp"
                 android:text="Chi tiết báo cáo"
-                android:gravity="center|left"
-                android:layout_margin="5dp"/>
+                android:textColor="@color/black"
+                android:textSize="18dp"
+                android:textStyle="bold" />
 
             <com.anychart.AnyChartView
                 android:id="@+id/any_chart_view"
                 android:layout_width="match_parent"
                 android:layout_height="470dp"
-                android:layout_margin="10dp"/>
+                android:layout_margin="10dp" />
 
         </LinearLayout>
 
