--- a/app/src/main/res/layout/activity_month_report.xml
+++ b/app/src/main/res/layout/activity_month_report.xml
@@ -4,21 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".ListReport.MonthReportActivity"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="70dp"
         android:background="@color/white"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/btn_BackReportMonth"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_gravity="center"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="20dp"
             android:background="@drawable/back" />
 
         <TextView
@@ -26,17 +27,16 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="Báo cáo - thống kê"
+            android:text="Thống kê theo tháng"
             android:textColor="@color/black"
-            android:textSize="17sp"
-            android:textStyle="bold" />
+            android:textSize="19sp"
+            android:textStyle="bold"  />
 
-        <ImageButton
-            android:id="@+id/btn_AddProduct"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
+        <View
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_gravity="center"
-            android:layout_marginRight="10dp"
+            android:layout_marginRight="20dp"
             android:background="@color/white" />
     </LinearLayout>
 
@@ -49,30 +49,42 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="horizontal">
 
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:text="Tùy chọn tháng báo cáo"
-                android:gravity="center|left"
-                android:layout_margin="5dp"/>
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="10dp"
+                android:text="Chọn tháng"
+                android:textColor="@color/black"
+                android:textSize="17dp"
+                android:textStyle="bold"  />
 
             <TextView
                 android:id="@+id/report_monthreport"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="40dp"
-                android:text="01-2021"
-                android:textSize="22sp"
-                android:textStyle="bold"
-                android:gravity="center"/>
+                android:layout_weight="1"
+                android:background="@drawable/bg_textfield"
+                android:drawableRight="@drawable/sort"
+                android:gravity="center"
+                android:paddingRight="7dp"
+                android:textSize="15sp"
+                android:textStyle="bold"/>
 
             <Button
                 android:id="@+id/report_xemreportthang"
-                android:layout_width="match_parent"
+                android:layout_width="100dp"
                 android:layout_height="50dp"
-                android:text="Xem báo cáo"
-                android:layout_margin="5dp"/>
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="20dp"
+                android:background="@drawable/bg_blue"
+                android:text="Xem"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:textSize="17dp"
+                android:textStyle="bold" />
 
         </LinearLayout>
 
@@ -83,20 +95,20 @@
             android:layout_weight="1">
 
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="30dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="10dp"
                 android:text="Chi tiết báo cáo"
-                android:gravity="center|left"
-                android:layout_margin="5dp"/>
+                android:textColor="@color/black"
+                android:textSize="18dp"
+                android:textStyle="bold"/>
 
             <com.anychart.AnyChartView
                 android:id="@+id/any_chart_view_thang"
                 android:layout_width="match_parent"
                 android:layout_height="470dp"
                 android:layout_margin="10dp"/>
-
         </LinearLayout>
-
     </LinearLayout>
-
 </LinearLayout>
