--- a/app/src/main/res/layout/activity_list_customer.xml
+++ b/app/src/main/res/layout/activity_list_customer.xml
@@ -52,8 +52,10 @@
             android:id="@+id/searchViewCustomer"
             android:layout_width="match_parent"
             android:layout_height="37dp"
-            app:queryHint="Search..."
-            android:layout_margin="5dp"/>
+            android:layout_margin="5dp"
+            android:background="@drawable/bg_textfield"
+            app:iconifiedByDefault="false"
+            app:queryHint="Search..."/>
 
     </LinearLayout>
 
