--- a/app/src/main/res/layout/activity_add_info.xml
+++ b/app/src/main/res/layout/activity_add_info.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Infomation.AddInfoActivity"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <LinearLayout
@@ -116,6 +117,7 @@
                 android:hint="Nhập địa chỉ ..."
                 android:inputType="text"
                 android:paddingLeft="20dp"
+                android:paddingRight="20dp"
                 android:textColor="@color/black"
                 android:textSize="16dp" />
 
