--- a/app/src/main/res/layout/activity_infomation.xml
+++ b/app/src/main/res/layout/activity_infomation.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Infomation.InfomationActivity"
-    android:orientation="vertical">
+    android:background="@color/white"
+    android:orientation="vertical"
+    tools:context=".Infomation.InfomationActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -37,7 +37,7 @@
             android:layout_height="30dp"
             android:layout_gravity="center"
             android:layout_marginRight="20dp"
-            android:background="@drawable/add" />
+            android:background="@drawable/edit" />
     </LinearLayout>
 
     <LinearLayout
@@ -62,11 +62,11 @@
             android:layout_marginTop="10dp"
             android:layout_marginRight="20dp"
             android:background="@drawable/bg_textfield"
-            android:text="Chưa nhập thông tin"
+            android:gravity="center|left"
             android:paddingLeft="20dp"
+            android:text="Chưa nhập thông tin"
             android:textColor="@color/black"
-            android:textSize="16dp"
-            android:gravity="center|left"/>
+            android:textSize="16dp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -85,11 +85,11 @@
             android:layout_marginTop="10dp"
             android:layout_marginRight="20dp"
             android:background="@drawable/bg_textfield"
-            android:text="Chưa nhập thông tin"
+            android:gravity="center|left"
             android:paddingLeft="20dp"
+            android:text="Chưa nhập thông tin"
             android:textColor="@color/black"
-            android:textSize="16dp"
-            android:gravity="center|left"/>
+            android:textSize="16dp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -108,11 +108,12 @@
             android:layout_marginTop="10dp"
             android:layout_marginRight="20dp"
             android:background="@drawable/bg_textfield"
-            android:text="Chưa nhập thông tin"
+            android:gravity="center|left"
             android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:text="Chưa nhập thông tin"
             android:textColor="@color/black"
-            android:textSize="16dp"
-            android:gravity="center|left"/>
+            android:textSize="16dp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -131,11 +132,11 @@
             android:layout_marginTop="10dp"
             android:layout_marginRight="20dp"
             android:background="@drawable/bg_textfield"
-            android:text="Chưa nhập thông tin"
+            android:gravity="center|left"
             android:paddingLeft="20dp"
+            android:text="Chưa nhập thông tin"
             android:textColor="@color/black"
-            android:textSize="16dp"
-            android:gravity="center|left"/>
+            android:textSize="16dp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -154,11 +155,11 @@
             android:layout_marginTop="10dp"
             android:layout_marginRight="20dp"
             android:background="@drawable/bg_textfield"
-            android:text="Chưa nhập thông tin"
+            android:gravity="center|left"
             android:paddingLeft="20dp"
+            android:text="Chưa nhập thông tin"
             android:textColor="@color/black"
-            android:textSize="16dp"
-            android:gravity="center|left"/>
+            android:textSize="16dp" />
 
     </LinearLayout>
 
