--- a/app/src/main/res/layout/activity_list_banner.xml
+++ b/app/src/main/res/layout/activity_list_banner.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Banner.ListBannerActivity"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <LinearLayout
@@ -53,8 +54,10 @@
             android:id="@+id/searchViewPoster"
             android:layout_width="match_parent"
             android:layout_height="37dp"
-            app:queryHint="Search..."
-            android:layout_margin="5dp"/>
+            android:layout_margin="5dp"
+            android:background="@drawable/bg_textfield"
+            app:iconifiedByDefault="false"
+            app:queryHint="Search..."/>
     </LinearLayout>
 
     <LinearLayout
