--- a/app/src/main/res/layout/activity_list_product.xml
+++ b/app/src/main/res/layout/activity_list_product.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white"
     android:orientation="vertical"
     tools:context=".List_Product.ListProductActivity">
@@ -54,8 +54,10 @@
             android:id="@+id/searchView"
             android:layout_width="match_parent"
             android:layout_height="37dp"
-            app:queryHint="Search..."
-            android:layout_margin="5dp"/>
+            android:layout_margin="5dp"
+            android:background="@drawable/bg_textfield"
+            app:iconifiedByDefault="false"
+            app:queryHint="Search..." />
     </LinearLayout>
 
     <LinearLayout
