--- a/app/src/main/res/layout/custom_poster.xml
+++ b/app/src/main/res/layout/custom_poster.xml
@@ -9,14 +9,25 @@
     <ImageView
         android:id="@+id/poster_img"
         android:layout_width="200dp"
-        android:layout_height="100dp"/>
+        android:layout_height="100dp"
+        android:layout_weight="1"/>
 
     <TextView
         android:id="@+id/poster_name"
-        android:layout_width="match_parent"
+        android:layout_width="150dp"
         android:layout_height="100dp"
+        android:layout_weight="1"
         android:text="ten poster"
         android:gravity="center|left"
         android:layout_marginLeft="10dp"/>
+
+    <ImageView
+        android:id="@+id/poster_delete"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_gravity="center"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/delete"/>
+
 
 </LinearLayout>
